--- a/index.html
+++ b/index.html
@@ -30,8 +30,22 @@
                 </nav>
                 
                 <ul class="header-contacts list ">
-                    <li class="contacts-item"><a href='mailto:info@devstudio.com' class="contacts-link">info@devstudio.com</a></li>
-                    <li class="contacts-item"><a href='tel:+380961111111' class="contacts-link">+38 096 111 11 11</a></li>
+                    <li class="contacts-item">
+                        <a href='mailto:info@devstudio.com' class="contacts-link e-mail">
+                            <svg class="link-item">
+                                <use href="./images/icons/sprite.svg#icon-mail"></use>
+                            </svg>
+                            info@devstudio.com
+                        </a>
+                    </li>
+                    <li class="contacts-item">
+                        <a href='tel:+380961111111' class="contacts-link telephone">
+                            <svg class="link-item">
+                                <use href="./images/icons/sprite.svg#icon-smartphone"></use>
+                            </svg>
+                            +38 096 111 11 11
+                        </a>
+                    </li>
                 </ul>
             </div>    
     </header>
@@ -47,19 +61,19 @@
             <div class="container">
                 <h2 hidden class="section-title">Преимущества организации</h2>
                 <ul class="main-advantages list">
-                    <li class="main-advantages-item">
+                    <li class="main-advantages-item antenna">
                         <h3 class="title">Внимание к деталям</h3>
                         <p class="description">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
-                    <li class="main-advantages-item">
+                    <li class="main-advantages-item clock">
                         <h3 class="title">Пунктуальность</h3>
                         <p class="description">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
-                    <li class="main-advantages-item">
+                    <li class="main-advantages-item diagram">
                         <h3 class="title">Планирование</h3>
                         <p class="description">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
-                    <li class="main-advantages-item">
+                    <li class="main-advantages-item astronaut">
                         <h3 class="title">Современные технологии</h3>
                         <p class="description">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
@@ -95,21 +109,51 @@
                         <img src="./images/personal-igor-demyanenko.jpg" alt="personal-igor-demyanenko" width="270" height="260">
                         <h3 class="title">Игорь Демьяненко</h3>
                         <p class="description">Product Designer</p>
+                        <ul class="social-links-list">
+                            <li class="social-links-item">
+                                <a class="instagram">
+                                    <svg>
+                                        <use href="./image"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social-links-item"></li>
+                            <li class="social-links-item"></li>
+                            <li class="social-links-item"></li>
+                        </ul>
                     </li>
                     <li class="personal-card">
                         <img src="./images/personal-olga-repina.jpg" alt="personal-olga-repina" width="270" height="260">
                         <h3 class="title">Ольга Репина</h3>
-                        <p class="description">Frontend Developer</p>
+                        <p class="description">Frontend Developer</p>\
+                        <ul class="social-links-list"></ul>>
+                            <li class="social-links-item"></li>
+                            <li class="social-links-item"></li>
+                            <li class="social-links-item"></li>
+                            <li class="social-links-item"></li>
+                        </ul>
                     </li>
                     <li class="personal-card">
                         <img src="./images/personal-nikolaj-tarasov.jpg" alt="personal-nikolaj-tarasov" width="270" height="260">
                         <h3 class="title">Николай Тарасов</h3>
                         <p class="description">Marketing</p>
+                        <ul class="social-links-list"></ul>>
+                            <li class="social-links-item"></li>
+                            <li class="social-links-item"></li>
+                            <li class="social-links-item"></li>
+                            <li class="social-links-item"></li>
+                        </ul>
                     </li>
                     <li class="personal-card">
                         <img src="./images/personal-mihail-ermakov.jpg" alt="personal-mihail-ermakov" width="270" height="260">
                         <h3 class="title">Михаил Ермаков</h3>
                         <p class="description">UI Designer</p>
+                        <ul class="social-links-list"></ul>>
+                            <li class="social-links-item"></li>
+                            <li class="social-links-item"></li>
+                            <li class="social-links-item"></li>
+                            <li class="social-links-item"></li>
+                        </ul>
                     </li>    
                 </ul>
             </div>           
