--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
                         <img src="./images/personal-igor-demyanenko.jpg" alt="personal-igor-demyanenko" width="270" height="260">
                         <h3 class="title">Игорь Демьяненко</h3>
                         <p class="description">Product Designer</p>
-                        <ul class="social-links-list">
+                        <ul class="social-links list">
                             <li class="social-links-item">
                                 <a class="instagram">
-                                    <svg>
-                                        <use href="./image"></use>
+                                    <svg class="istagram-item">
+                                        <use href="/images/icons/sprite.svg#icon-instagram""></use>
                                     </svg>
                                 </a>
                             </li>
@@ -125,8 +125,8 @@
                     <li class="personal-card">
                         <img src="./images/personal-olga-repina.jpg" alt="personal-olga-repina" width="270" height="260">
                         <h3 class="title">Ольга Репина</h3>
-                        <p class="description">Frontend Developer</p>\
-                        <ul class="social-links-list"></ul>>
+                        <p class="description">Frontend Developer</p>
+                        <ul class="social-links list">
                             <li class="social-links-item"></li>
                             <li class="social-links-item"></li>
                             <li class="social-links-item"></li>
@@ -137,7 +137,7 @@
                         <img src="./images/personal-nikolaj-tarasov.jpg" alt="personal-nikolaj-tarasov" width="270" height="260">
                         <h3 class="title">Николай Тарасов</h3>
                         <p class="description">Marketing</p>
-                        <ul class="social-links-list"></ul>>
+                        <ul class="social-links list">
                             <li class="social-links-item"></li>
                             <li class="social-links-item"></li>
                             <li class="social-links-item"></li>
@@ -148,7 +148,7 @@
                         <img src="./images/personal-mihail-ermakov.jpg" alt="personal-mihail-ermakov" width="270" height="260">
                         <h3 class="title">Михаил Ермаков</h3>
                         <p class="description">UI Designer</p>
-                        <ul class="social-links-list"></ul>>
+                        <ul class="social-links list">
                             <li class="social-links-item"></li>
                             <li class="social-links-item"></li>
                             <li class="social-links-item"></li>
