--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             <li class="social-links-item">
                                 <a class="instagram">
                                     <svg class="istagram-item">
-                                        <use href="/images/icons/sprite.svg#icon-instagram""></use>
+                                        <use href="/images/icons/sprite.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
