--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
             </div>
 
             <div class="footer-social-links">
-                <h3 class="footer-social-links-title">Приоединяйтесь</h3>
+                <h3 class="footer-social-links-title">Присоединяйтесь</h3>
                 <ul class="social-links list">
                     <li class="social-links-item">
                         <a class="social-links-link">
