--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                     <li class="clients-list-item">
                         <a class="clients-links-link">
                             <svg class="link-svg">
-                                <use href="/images/icons/sprite.svg#icon-logo_yaco"></use>
+                                <use href="../images/icons/sprite.svg#icon-logo_yaco"></use>
                             </svg>
                         </a> 
                     </li>
@@ -275,7 +275,7 @@
                     <li class="clients-list-item">
                         <a class="clients-links-link">
                             <svg class="link-svg">
-                                <use href="/images/icons/sprite.svg#icon-logo_com_tagline_here"></use>
+                                <use href="../images/icons/sprite.svg#icon-logo_com_tagline_here"></use>
                             </svg>
                         </a>
                     </li>
@@ -283,7 +283,7 @@
                     <li class="clients-list-item">
                         <a class="clients-links-link">
                             <svg class="link-svg">
-                                <use href="/images/icons/sprite.svg#icon-logo_company"></use>
+                                <use href="../images/icons/sprite.svg#icon-logo_company"></use>
                             </svg>
                         </a>
                     </li>
@@ -291,7 +291,7 @@
                     <li class="clients-list-item">
                         <a class="clients-links-link">
                             <svg class="link-svg">
-                                <use href="/images/icons/sprite.svg#icon-logo_foster_peters"></use>
+                                <use href="../images/icons/sprite.svg#icon-logo_foster_peters"></use>
                             </svg>
                         </a>
                     </li>
@@ -299,7 +299,7 @@
                     <li class="clients-list-item">
                         <a class="clients-links-link">
                             <svg class="link-svg">
-                                <use href="/images/icons/sprite.svg#icon-logo_brand"></use>
+                                <use href="../images/icons/sprite.svg#icon-logo_brand"></use>
                             </svg>
                         </a>
                     </li>
@@ -307,7 +307,7 @@
                     <li class="clients-list-item">
                         <a class="clients-links-link">
                             <svg class="link-svg">
-                                <use href="/images/icons/sprite.svg#icon-logo_com_tag_line"></use>
+                                <use href="../images/icons/sprite.svg#icon-logo_com_tag_line"></use>
                             </svg>
                         </a>
                     </li>
@@ -334,7 +334,7 @@
                     <li class="social-links-item">
                         <a class="social-links-link">
                             <svg class="link-svg">
-                                <use href="/images/icons/sprite.svg#icon-instagram"></use>
+                                <use href="../images/icons/sprite.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
@@ -342,7 +342,7 @@
                     <li class="social-links-item">
                         <a class="social-links-link">
                             <svg class="link-svg">
-                                <use href="/images/icons/sprite.svg#icon-twitter"></use>
+                                <use href="../images/icons/sprite.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
@@ -350,7 +350,7 @@
                     <li class="social-links-item">
                         <a class="social-links-link">
                             <svg class="link-svg">
-                                <use href="/images/icons/sprite.svg#icon-facebook"></use>
+                                <use href="../images/icons/sprite.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
@@ -358,7 +358,7 @@
                     <li class="social-links-item">
                         <a class="social-links-link">
                             <svg class="link-svg">
-                                <use href="/images/icons/sprite.svg#icon-linkedin"></use>
+                                <use href="../images/icons/sprite.svg#icon-linkedin"></use>
                             </svg>
                         </a>
                     </li>
