--- a/portfolio.html
+++ b/portfolio.html
@@ -149,7 +149,7 @@
                     <li class="social-links-item">
                         <a class="social-links-link">
                             <svg class="link-svg">
-                                <use href="/images/icons/sprite.svg#icon-instagram"></use>
+                                <use href="../images/icons/sprite.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
@@ -157,7 +157,7 @@
                     <li class="social-links-item">
                         <a class="social-links-link">
                             <svg class="link-svg">
-                                <use href="/images/icons/sprite.svg#icon-twitter"></use>
+                                <use href="../images/icons/sprite.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
@@ -165,7 +165,7 @@
                     <li class="social-links-item">
                         <a class="social-links-link">
                             <svg class="link-svg">
-                                <use href="/images/icons/sprite.svg#icon-facebook"></use>
+                                <use href="../images/icons/sprite.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
@@ -173,7 +173,7 @@
                     <li class="social-links-item">
                         <a class="social-links-link">
                             <svg class="link-svg">
-                                <use href="/images/icons/sprite.svg#icon-linkedin"></use>
+                                <use href="../images/icons/sprite.svg#icon-linkedin"></use>
                             </svg>
                         </a>
                     </li>
