--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             <li class="social-links-item">
                                 <a class="social-links-link">
                                     <svg class="link-svg">
-                                        <use href="/images/icons/sprite.svg#icon-instagram"></use>
+                                        <use href="./images/icons/sprite.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -121,7 +121,7 @@
                             <li class="social-links-item">
                                 <a class="social-links-link">
                                     <svg class="link-svg">
-                                        <use href="/images/icons/sprite.svg#icon-twitter"></use>
+                                        <use href="./images/icons/sprite.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -129,7 +129,7 @@
                             <li class="social-links-item">
                                 <a class="social-links-link">
                                     <svg class="link-svg">
-                                        <use href="/images/icons/sprite.svg#icon-facebook"></use>
+                                        <use href="./images/icons/sprite.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -137,7 +137,7 @@
                             <li class="social-links-item">
                                 <a class="social-links-link">
                                     <svg class="link-svg">
-                                        <use href="/images/icons/sprite.svg#icon-linkedin"></use>
+                                        <use href="./images/icons/sprite.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -151,7 +151,7 @@
                             <li class="social-links-item">
                                 <a class="social-links-link">
                                     <svg class="link-svg">
-                                        <use href="/images/icons/sprite.svg#icon-instagram"></use>
+                                        <use href="./images/icons/sprite.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -159,7 +159,7 @@
                             <li class="social-links-item">
                                 <a class="social-links-link">
                                     <svg class="link-svg">
-                                        <use href="/images/icons/sprite.svg#icon-twitter"></use>
+                                        <use href="./images/icons/sprite.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -167,7 +167,7 @@
                             <li class="social-links-item">
                                 <a class="social-links-link">
                                     <svg class="link-svg">
-                                        <use href="/images/icons/sprite.svg#icon-facebook"></use>
+                                        <use href="./images/icons/sprite.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -175,7 +175,7 @@
                             <li class="social-links-item">
                                 <a class="social-links-link">
                                     <svg class="link-svg">
-                                        <use href="/images/icons/sprite.svg#icon-linkedin"></use>
+                                        <use href="./images/icons/sprite.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -189,7 +189,7 @@
                             <li class="social-links-item">
                                 <a class="social-links-link">
                                     <svg class="link-svg">
-                                        <use href="/images/icons/sprite.svg#icon-instagram"></use>
+                                        <use href="./images/icons/sprite.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -197,7 +197,7 @@
                             <li class="social-links-item">
                                 <a class="social-links-link">
                                     <svg class="link-svg">
-                                        <use href="/images/icons/sprite.svg#icon-twitter"></use>
+                                        <use href="./images/icons/sprite.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -205,7 +205,7 @@
                             <li class="social-links-item">
                                 <a class="social-links-link">
                                     <svg class="link-svg">
-                                        <use href="/images/icons/sprite.svg#icon-facebook"></use>
+                                        <use href="./images/icons/sprite.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -213,7 +213,7 @@
                             <li class="social-links-item">
                                 <a class="social-links-link">
                                     <svg class="link-svg">
-                                        <use href="/images/icons/sprite.svg#icon-linkedin"></use>
+                                        <use href="./images/icons/sprite.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -227,7 +227,7 @@
                             <li class="social-links-item">
                                 <a class="social-links-link">
                                     <svg class="link-svg">
-                                        <use href="/images/icons/sprite.svg#icon-instagram"></use>
+                                        <use href="./images/icons/sprite.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -235,7 +235,7 @@
                             <li class="social-links-item">
                                 <a class="social-links-link">
                                     <svg class="link-svg">
-                                        <use href="/images/icons/sprite.svg#icon-twitter"></use>
+                                        <use href="./images/icons/sprite.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -243,7 +243,7 @@
                             <li class="social-links-item">
                                 <a class="social-links-link">
                                     <svg class="link-svg">
-                                        <use href="/images/icons/sprite.svg#icon-facebook"></use>
+                                        <use href="./images/icons/sprite.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -251,7 +251,7 @@
                             <li class="social-links-item">
                                 <a class="social-links-link">
                                     <svg class="link-svg">
-                                        <use href="/images/icons/sprite.svg#icon-linkedin"></use>
+                                        <use href="./images/icons/sprite.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
                             </li>
